Fix resource path for directory-based modules (#325)